fix height and gap from drop down menu

--- a/src/app/features/board/task-modal/task-modal.scss
+++ b/src/app/features/board/task-modal/task-modal.scss
@@ -359,14 +359,14 @@ form {
 
 .dropdown-menu {
   position: absolute;
-  top: calc(100% + 4px);
+  top: calc(100% + -2px);
   left: 0;
   right: 0;
   background: #ffffff;
   border: 1px solid #d1d1d1;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  max-height: 200px;
+  max-height: 244px;
   overflow-y: auto;
   z-index: 10;
 }
